testsuite/tests/typecheck/should_fail/tcfail104.stderr

tcfail104.hs:14:15: error:
    Couldn't match expected type ‘forall a. a -> a’
                with actual type ‘Char -> Char’
    When checking that the pattern signature: forall a. a -> a
      fits the type of its context: Char -> Char
    In the pattern: x :: forall a. a -> a
    In the expression: (\ (x :: forall a. a -> a) -> x)

tcfail104.hs:22:15: error:
    Couldn't match expected type ‘forall a. a -> a’
                with actual type ‘Char -> Char’
    When checking that the pattern signature: forall a. a -> a
      fits the type of its context: Char -> Char
    In the pattern: x :: forall a. a -> a
    In the expression: (\ (x :: forall a. a -> a) -> x)
